--- a/output/abccare_endogsi30y_inc_labor_cnlsy_ready.tex
+++ b/output/abccare_endogsi30y_inc_labor_cnlsy_ready.tex
@@ -7,7 +7,7 @@ Education (30) &         &         &         &         &  3788.507 &     0.000 &
 Labor Income (21) &         &         &         &         &     0.662 &     0.000 &     0.752 &     0.000 &     0.662 &     0.000 &     0.740 &     0.000 \\  
 BMI (34) &         &         &         &         &         &         &         &         &  -268.578 &     1.000 &  -155.777 &     0.825 \\  
 $\hat{\bm{\theta}}_c$ &         &         &  2643.130 &     0.125 &         &         & -4606.765 &     0.950 &         &         & -4764.618 &     0.960 \\  
-$\hat{\bm{\theta}}_c$ &         &         & -3,492.116 &     0.995 &         &         & -1,261.851 &     0.785 &         &         & -1,185.336 &     0.785 \\  
+$\hat{\bm{\theta}}_n$ &         &         & -3,492.116 &     0.995 &         &         & -1,261.851 &     0.785 &         &         & -1,185.336 &     0.785 \\  
 Constant &  3,139.966 &     0.225 &  5,788.438 &     0.265 & -55,600.00 &     1.000 & -86,100.00 &     1.000 & -46,600 &     1.000 & -82,100.00 &     1.000 \\  \\ \midrule
 $F$-stat &    46.347 &     &     7.038 &     &    91.507 &    &    19.791 &     &    73.651 &     &    17.103 &   \\  
 $R^2$ &     0.028 &    &     0.055 &      &     0.214 &  &     0.336 &     &     0.218 &    &     0.337 &     \\  
