--- a/output/abccare_endogsi30y_inc_labor_control_ready.tex
+++ b/output/abccare_endogsi30y_inc_labor_control_ready.tex
@@ -3,11 +3,11 @@
  & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value & Estimate & $p$-value \\ \midrule
 Mother's Education &   750.205 &     0.365 &   176.630 &     0.445 &  -848.096 &     0.710 & -1006.963 &     0.705 & -2173.476 &     0.850 & -3037.516 &     0.865 \\  
 PIAT (5-7) &        &        &        &        &   105.463 &     0.340 &   485.077 &     0.195 &   409.121 &     0.205 &  1097.040 &     0.040 \\  
- &        &        &        &        &  3311.359 &     0.005 &  4381.955 &     0.010 &  2325.035 &     0.190 &  4018.356 &     0.150 \\  
-Education (30) &        &        &        &        &     0.652 &     0.025 &     0.941 &     0.030 &     0.528 &     0.130 &     0.467 &     0.265 \\  
-Labor Income (21) &        &        &        &        &        &        &        &        &  -124.659 &     0.595 &   224.972 &     0.365 \\  
+Education (30) &        &        &        &        &  3311.359 &     0.005 &  4381.955 &     0.010 &  2325.035 &     0.190 &  4018.356 &     0.150 \\  
+Labor Income (21) &        &        &        &        &     0.652 &     0.025 &     0.941 &     0.030 &     0.528 &     0.130 &     0.467 &     0.265 \\  
+BMI (34)  &        &        &        &        &        &        &        &        &  -124.659 &     0.595 &   224.972 &     0.365 \\  
 $\hat{\bm{\theta}}_c$ &        &        &   579.347 &     0.435 &        &        & -7660.483 &     0.885 &        &        & -7309.957 &     0.835 \\  
-$\hat{\bm{\theta}}_c$&        &        &  -758.292 &     0.540 &        &        &  7392.882 &     0.065 &        &        &  1383.193 &     0.415 \\  
+$\hat{\bm{\theta}}_n$&        &        &  -758.292 &     0.540 &        &        &  7392.882 &     0.065 &        &        &  1383.193 &     0.415 \\  
 Constant & 18,571.154 &     0.175 & 23,986.424 &     0.175 & -26,300.00 &     0.840 & -80,300 &     0.955 & -23,200.00 &     0.700 & -112,000 &     0.940 \\  \\ \midrule
 $F$-stat &     1.266 &      &     1.788 &      &    11.061 &     &     7.517 &     &     8.455 &     &    10.450 &      \\  
 $R^2$ &     0.018 &      &     0.074 &      &     0.281 &      &     0.380 &      &     0.331 &     &     0.472 &     \\  
