--- a/output/abccare_endogp_inc21y_control_ready.tex
+++ b/output/abccare_endogp_inc21y_control_ready.tex
@@ -7,9 +7,9 @@ Education (30) &         &         &         &         &  -357.706 &     0.605 &
 Labor Income (21) &         &         &         &         &     0.003 &     0.500 &     0.117 &     0.395 &    -0.282 &     0.770 &    -0.615 &     0.715 \\  
 BMI (34) &         &         &         &         &         &         &         &         &  -119.097 &     0.660 &   -68.442 &     0.520 \\  
 $\hat{\bm{\theta}}_c$ &         &         &   -53.861 &     0.500 &         &         & -4078.860 &     0.805 &         &         & -4796.737 &     0.640 \\  
-$\hat{\bm{\theta}}_c$ &         &         &  1207.343 &     0.355 &         &         &  3546.750 &     0.195 &         &         & -2027.290 &     0.520 \\  \\
+$\hat{\bm{\theta}}_n$ &         &         &  1207.343 &     0.355 &         &         &  3546.750 &     0.195 &         &         & -2027.290 &     0.520 \\  \\
 Constant  & -2,620.667 &     0.630 & -7,986.526 &     0.830 & 21,816.246 &     0.265 & -42,500.00 &     0.725 & 31,061.662 &     0.335 & -233,000.00 &     0.775 \\  \\ \midrule
-$F$-stat &     9.939 &      &     5.715 &     &     3.931 &     &     9.024 &    &   189.704 &     & 11567.001 &     \\  
+$F$-stat &     9.939 &      &     5.715 &     &     3.931 &     &     9.024 &    &   189.704 &     & 11,567.001 &     \\  
 $R^2$ &     0.148 &     &     0.271 &    &     0.269 &      &     0.436 &     &     0.506 &      &     0.844 &    \\  
 Observations &    36 &   &    28 &    &    28 &   &    25 &   &    19 &  &    16 &   \\  
 \bottomrule \end{tabular}
