tables changes too

--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -470,7 +470,7 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \noindent For want of data to approximate $\theta_{c}, \theta_{n}$ in PSID and NLSY79, we test this assumption using the CNLSY. Our measurement system for $\theta_{c}$ consists of PIAT sections that we do not use to predict (reading and comprehension) as well as by the Peabody Picture Vocabulary Test (PPVT). Our measurement system for $\theta_{n}$ is based on six scales of the Behavior Problems Index (e.g., anxiety, dependency, social behavior).\\
 
-\noindent Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this exercise for the two variables we predict, at age 30. We display specifications based on different control sets.\\ 
+\noindent Table~\ref{table:endoginc} and ~\ref{table:endogti} show the results from this exercise for the parental income at (child's) age 21 and labor and transfer income at age 30. We display specifications based on different control sets. For parental income we do not present a test for the CNLSY because we base our forecast on PSID and NLSY79.\\ 
 
 \noindent The coefficients characterizing our predictions in ABC/CARE and CNLSY do not present major changes after controlling for estimates of $\theta_{c}, \theta_{n}$. Further, these terms do not significantly determine the outcomes being predicted when we account for the full control set we use when predicting.
 
@@ -570,7 +570,7 @@ Note: Panels (a) displays a factor score estimated based on the measurement syst
 
 \begin{sidewaystable}[H]
 \begin{threeparttable}
-\caption{Prediction of Transfer Income at Age 30 Accounting for $\bm{B}$ and $\bm{\theta}, \bm{X}_{t}$, ABC/CARE CNLSY}
+\caption{Prediction of Transfer Income at Age 30 Accounting for $\bm{B}$ and $\bm{\theta}, \bm{X}_{t}$, ABC/CARE CNLSY} \label{table:endogti}
 \centering
 \footnotesize
 \input{output/abccare_endogsi30y_inc_trans_pub_cnsly_ready.tex}
