--- a/output/abccare_funcform3_pi_ready.tex
+++ b/output/abccare_funcform3_pi_ready.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{lcccccccccccc} \toprule
 &\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
+ & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education &  3489.523 &     0.075 & -3727.533 &     0.860 & -7217.057 &     0.925 & -1262.462 &     0.555 &  1607.758 &     0.410 &  2870.219 &     0.440 \\  
 PIAT (5-7) &   199.457 &     0.385 &   421.353 &     0.220 &   221.896 &     0.420 &  1482.562 &     0.190 & -1031.870 &     0.795 & -2514.432 &     0.835 \\  
 Education (30) & -3873.775 &     0.835 & -1096.302 &     0.680 &  2777.473 &     0.300 &  2671.076 &     0.395 & -3009.434 &     0.765 & -5680.510 &     0.670 \\  
