--- a/output/abccare_endogsi30y_inc_labor_treatment_ready.tex
+++ b/output/abccare_endogsi30y_inc_labor_treatment_ready.tex
@@ -8,7 +8,7 @@ Labor Income (21) &         &         &         &         &    -0.177 &     0.64
 BMI (34)  &         &         &         &         &         &         &         &         & -1044.418 &     0.970 & -1002.489 &     0.975 \\  
 $\hat{\bm{\theta}}_c$ &         &         &  2766.355 &     0.395 &         &         &  4828.932 &     0.335 &         &         & -1046.648 &     0.515 \\  
 $\hat{\bm{\theta}}_n$ &         &         &  7600.333 &     0.180 &         &         &  6223.317 &     0.195 &         &         &  3833.809 &     0.260 \\  
-Constant &  2,736.822 &     0.470 & 10,553.934 &     0.420 & -123,000.00 &     0.910 & -109,000 &     0.760 & -176,000 &     0.975 & -203,000.00e+05 &     0.910 \\  \\ \midrule
+Constant &  2,736.822 &     0.470 & 10,553.934 &     0.420 & -123,000.00 &     0.910 & -109,000 &     0.760 & -176,000 &     0.975 & -203,000.00 &     0.910 \\  \\ \midrule
 $F$-stat &     1.819 &      &     2.450 &      &     4.586 &     &     4.954 &     &     6.023 &     &     9.697 &     \\  
 $R^2$ &     0.023 &      &     0.100 &      &     0.259 &     &     0.334 &      &     0.535 &     &     0.662 &      \\  
 Observations &    66 &      &    49 &      &    57 &      &    46 &    &    43 &     &    35 &    \\  
