--- a/output/abccare_funcform1_pi_ready.tex
+++ b/output/abccare_funcform1_pi_ready.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{lcccccccccccc} \toprule
 &\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
+ & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education &  1614.840 &     0.125 & -1836.997 &     0.720 & -3451.836 &     0.885 &  1885.774 &     0.120 & -3691.968 &     0.915 & -5577.742 &     0.950 \\  
 PIAT (5-7) &         &         &         &         &         &         &         &         &         &         &         &          \\  
 Education (30)  &         &         &         &         &         &         &         &         &         &         &         &         \\  
