--- a/output/abccare_funcform2_pi_ready.tex
+++ b/output/abccare_funcform2_pi_ready.tex
@@ -1,5 +1,6 @@
 \begin{tabular}{lcccccccccccc} \toprule
 &\multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} & \multicolumn{2}{c}{Control} & \multicolumn{2}{c}{Treatment} & \multicolumn{2}{c}{Treatment - Control} \\
+ & Coefficient  & $p$-value  & Coefficient  & $p$-value & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value  & Coefficient  & $p$-value \\ \midrule
 Mother's Education &  1866.269 &     0.120 & -2093.325 &     0.780 & -3959.594 &     0.895 & -1897.803 &     0.600 & -2065.021 &     0.770 &  -167.218 &     0.510 \\  
 PIAT (5-7) &   -79.200 &     0.560 &   127.221 &     0.355 &   206.422 &     0.370 &   -44.678 &     0.510 &  -229.758 &     0.655 &  -185.080 &     0.525 \\  
 Education (30) & -1782.898 &     0.855 &   399.921 &     0.405 &  2182.819 &     0.205 & -1784.935 &     0.685 &   584.046 &     0.370 &  2368.981 &     0.305 \\  
