minor changes before edits

--- a/heckman.bib
+++ b/heckman.bib
@@ -4931,6 +4931,16 @@
   Timestamp                = {2010.01.17}
 }
 
+@Book{Gregg_etal_2015_SocialRealities_BOOK,
+  Title                    = {Class, Race, Gender, and Crime: The Social Realities of Justice in America},
+  Author                   = {Barak, Gregg, and Leighton, Paul and Cotton, Allison},
+  Publisher                = {Rowman and Littlefield},
+  Year                     = {2015},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
+}
+
 @Article{Bardin_2012_Nature,
   Title                    = {Neurodevelopment: Unlocking the Brain},
   Author                   = {Bardin, Jon},
@@ -6261,6 +6271,18 @@
 
   Owner                    = {Jessica Dyer},
   Timestamp                = {2016.06.01 (checked)}
+}
+
+@Electronic{Becker_1995_Housework_Bloomberg,
+  Title                    = {Housework: The Missing Piece Of The Economic Pie},
+  Author                   = {Becker, Gary S.},
+  HowPublished             = {http://www.bloomberg.com/news/articles/1995-10-15/housework-the-missing-piece-of-the-economic-pie},
+  Month                    = {October},
+  Organization             = {Bloomberg},
+  Year                     = {1995},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
 }
 
 @Article{Becker_1993_JPE,
@@ -17245,6 +17267,16 @@
   Language                 = {eng}
 }
 
+@Electronic{Padova_Parma-Commune_2016,
+  Title                    = {Operating rules of the municipal and state kindergarten},
+  Author                   = {{City of Padova}},
+  HowPublished             = {http://www.padovanet.it/informazione/norme-di-funzionamento-della-scuola-dellinfanzia-comunale-e-statale},
+  Year                     = {2016},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
+}
+
 @Book{Claeskens-Hjort_2008_Model-Selection,
   Title                    = {Model Selection and Model Averaging},
   Author                   = {Claeskens, Gerda and Hjort, Nils Lid},
@@ -18145,6 +18177,16 @@
 
   Owner                    = {Jenni},
   Timestamp                = {2011.10.05}
+}
+
+@Electronic{Parma_Commune_2014,
+  Title                    = {Scuola e Servizi Educativi},
+  Author                   = {{Commune di Parma}},
+  HowPublished             = {http://www.comune.parma.it/servizieducativi/it-IT/Ristorazione-scolastica---Home.aspx},
+  Year                     = {2014},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
 }
 
 @TechReport{Comm-Plan-Serv_1973_Durhams-Share,
@@ -31836,6 +31878,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
+}
+
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -31848,17 +31901,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
-}
-
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -35251,6 +35293,18 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {43},
 
   Owner                    = {Jen}
+}
+
+@Book{Harms_1981_Learning-from-Cooking,
+  Title                    = {Learning from Cooking Experiences: A Teacher's Guide to Accompany Cook and Learn},
+  Author                   = {Harms, Thelma},
+  Publisher                = {Addison-Wesley Publishing Company},
+  Year                     = {1981},
+
+  Address                  = {Menlo Park, CA},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.27}
 }
 
 @Article{Harms_Clifford_1983,
@@ -43392,6 +43446,16 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2013.01.24}
 }
 
+@Electronic{Reggio_2008_Brochure,
+  Title                    = {Reggio Children Brochure},
+  Author                   = {{Instituzione del Comune di Reggio Emilia}},
+  HowPublished             = {http://www.scuolenidi.re.it/MappaAsiliScuole.jsp?mappa=0},
+  Year                     = {2008},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
+}
+
 @Book{IALS_2002_usersguide,
   Title                    = {International Adult Literacy Survey Microdata User's Guide},
   Author                   = {{International Adult Literacy Survey}},
@@ -43430,6 +43494,15 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Author                   = {Ishwaran, Hemant},
   Note                     = {Unpublished manuscript, Yale University, Department of Statistics},
   Year                     = {1993}
+}
+
+@TechReport{Reggio_Emilia_2014_CartadeiServizi_Report,
+  Title                    = {{C}arta dei {S}ervizi: dei {N}idi e delle {S}cuole dell'infanzia comunali a gestione diretta},
+  Author                   = {{Istituzione del Comune di Reggio Emilia}},
+  Year                     = {2014},
+
+  Owner                    = {Stallings_LLC},
+  Timestamp                = {2016.09.28}
 }
 
 @Article{PLACEHOLDER_Shigeru1992,
@@ -78502,6 +78575,19 @@ early childhood education and pre-kindergarten programs},
   Author                   = {Veenman, J.},
   Note                     = {Unpublished working paper, Tilburg University},
   Year                     = {2002}
+}
+
+@Book{Veitch-Harms_1981_Cook-and-Learn,
+  Title                    = {Cook and Learn: Pictorial Single Portion Recipes. A Child's Cook Book},
+  Author                   = {Veitch, Beverly and Harms, Thelma},
+  Publisher                = {Addison-Wesley Publishing Company},
+  Year                     = {1981},
+
+  Address                  = {Menlo Park, CA},
+  Edition                  = {Revised and Enlarged},
+
+  Owner                    = {Jessica Dyer},
+  Timestamp                = {2016.09.27}
 }
 
 @Article{Velicer_1976_EPM,
