--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -139,13 +139,13 @@ ABC/CARE targeted disadvantaged children in Chapel Hill/Durham, North Carolina.\
 
 The goals of these programs were to enhance the early-life skills of a disadvantaged population. The program supported language, motor, and cognitive development and developed socio-emotional competencies considered crucial for school success including task-orientation, ability to communicate, independence, and pro-social behavior.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Sparling_1974_Synth_Edu_Infant_SPEECH, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.}
 
-The program provided individualized treatment. Each child's progress was recorded and learning activities were appropriately adjusted every 2 to 3 weeks. Environments were organized to promote pre-literacy and access to a rich set of learning tools.\footnote{The ``Learningames'' approach was implemented by infant and toddler caregivers in 1:1 child-adult interactions. Each ``Learningames'' activity state a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome.} The curriculum emphasized active learning experiences, dramatic play, and basic ideas of order and category (``pre-academic skills''), as well as discipline and the ability to interact with and respect others.  At later ages (3 through 5), the program became increasingly structured, focusing on the development of ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.}
+The program provided individualized treatment. Each child's progress was recorded and learning activities were appropriately adjusted every 2 to 3 weeks. Environments were organized to promote pre-literacy and access to a rich set of learning tools.\footnote{The ``LearningGames'' approach was implemented by infant and toddler caregivers in 1:1 child-adult interactions. Each ``LearningGames'' activity state a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome.} The curriculum emphasized active learning experiences, dramatic play, and basic ideas of order and category (``pre-academic skills''), as well as discipline and the ability to interact with and respect others.  At later ages (3 through 5), the program became increasingly structured, focusing on the development of ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.}
 
-ABC recruited four cohorts of predominately African American children born between 1972 and 1976. CARE recruited two cohorts of children, born in 1978 and 1979. The recruitment processes for each study were identical. Potential participant families were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score of 11 or above on a High-risk Index (HRI).\footnote{See Appendix~\ref{appendix:background} for details on the construction of the HRI. Maternal education, parental IQ, presence of the father, family income, and father's job stability are its major components.}
+ABC recruited four cohorts of predominately African American children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. The recruitment processes for each study were identical. Potential participant families were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score of 11 or above on a High-risk Index (HRI).\footnote{See Appendix~\ref{appendix:background} for details on the construction of the HRI. Maternal education, parental IQ, presence of the father, family income, and father's job stability are its major components.}
 
-As shown in Table~\ref{tab:programcomparison}, the design and implementation of both ABC and CARE were very similar. ABC had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to either a treatment group that received center-based childcare or a control group. The second phase of treatment consisted of child academic support through home visits from ages 5 through 8. CARE consisted of two treatment phases that were very similar to those of ABC. The first phase of CARE, also lasting from birth until age 5, contained an additional treatment arm, home visits, designed to study the effects of improving home environments on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}
+As shown in Table~\ref{tab:programcomparison}, the design and implementation of both ABC and CARE were very similar. ABC had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to either a treatment group that received center-based childcare or a control group. The second phase of treatment consisted of child academic support through home visits from ages 5 through 8. CARE consisted of two treatment phases as well. They were very similar to those of ABC. The first phase of CARE, also lasting from birth until age 5, contained an additional treatment arm, home visits, designed to study the effects of improving home environments on child development.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} The second phase was only randomized in ABC.
 
-Our analysis pools the treatment group in CARE that received the center-based ABC curriculum with the ABC treatment group. We do not use the data on the CARE treatment group that only received family education.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{ABCCARE_Dataset} show that there is no effect of the CARE family education component alone.} We analyze the first stage of both programs (through age 5).\footnote{The second-phase treatment of ABC/CARE had very weak, if any, effects (for evidence, see \citealp{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citealp{ABCCARE_Dataset}). \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} establish the validity of pooling the data across the second arms of the experiments.}
+Our analysis focuses on the first phase and pools the treatment group in CARE that received the center-based ABC curriculum with the ABC treatment group. We do not use the data on the CARE treatment group that only received family education.\footnote{\citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{ABCCARE_Dataset} show that there is no effect of the CARE family education component alone.} We analyze the first stage of both programs (through age 5).\footnote{The second-phase treatment of ABC/CARE had very weak, if any, effects (for evidence, see \citealp{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citealp{ABCCARE_Dataset}). \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} establish the validity of pooling the data across the second arms of the experiments.}
 
 \begin{table}[!htbp]
 \centering
@@ -166,7 +166,7 @@ For both programs, from birth until the age of 8, data were collected annually o
 
 \subsection{Randomization Protocol and Compromises} \label{section:randomization}
 
-Randomization for ABC/CARE was conducted at the family level. Pairs of siblings and twins were jointly randomized into either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that pairing was based on the HRI, maternal education, maternal age, and gender of the subject, we do not know the original pairs. ABC collected an initial sample of 122 subjects. 22 subjects did not complete the first-phase of treatment as initially assigned by the randomization. We characterize each of the cases in Appendix~\ref{appendix:background} and document that our estimates are robust when we adjust for missing data using standard methods.\footnote{In Appendix~\ref{appendix:assessingcc}, we compare the observed, baseline characteristics of the subjects in Table~\ref{table:abccompromises} to the observed, baseline characteristics of the subjects who complied to the initial treatment assignment. We find few differences.} We conduct a comparable analysis for the CARE sample.
+Randomization for ABC/CARE was conducted at the family level. Pairs of siblings and twins were jointly randomized into either treatment or control groups.\footnote{Sibling pairs occurred when the two siblings were close enough in age such that both of them were eligible for the program.} Although we know that pairing was based on the HRI, maternal education, maternal age, and gender of the subject, we do not know the original pairs. ABC collected an initial sample of 122 subjects. 22 subjects did not complete the first-phase of treatment as initially assigned by the randomization. We characterize each of the cases in Appendix~\ref{appendix:background} and document that our estimates are robust when we adjust for missing data using standard methods. We conduct a comparable analysis for the CARE sample.
 
 \subsection{Control Group Substitution}
 
@@ -233,7 +233,7 @@ We define $V$ as a dummy variable indicating participation by control-group chil
 
 One parameter of interest addresses the question: what is the effect of the program as implemented? This is the effect of the program compared to the next best alternative as perceived by the parents and is defined by
 \begin{equation}\label{eq:effect}
-\bm{\Delta}_t := \mathbb{E} \left[ \bm{Y}^1_t -  \bm{Y}^0_t | W =1 \right] := \mathbb{E} \left[\bm{Y}^1_t - \bm{Y}^0_t | \bm{B} \in \mathcal{B}_0 \right],
+\bm{\Delta}_t := \mathbb{E} \left[ \bm{Y}^1_t -  \bm{Y}^0_t | W =1 \right] = \mathbb{E} \left[\bm{Y}^1_t - \bm{Y}^0_t | \bm{B} \in \mathcal{B}_0 \right],
 \end{equation}
 where the second equality follows because everyone eligible wants to participate in the program. For the sample of eligible persons, this parameter addresses the effectiveness of the program relative to the quality of all alternatives available when the program was implemented.
 
@@ -262,7 +262,7 @@ C_l = \sum^{N_l}_{j=1} 1 (\hat{\Delta}_{j,t} >0).
 \end{equation}
 The proportion of beneficial outcomes in block $l$ is $C_l / N_l$.\footnote{In our empirical application we consider all the outcomes as a block, and then different blocks grouped according to common categories---e.g., skills, health, crime.}
 
-Let $\mathcal{L}$ be the number of blocks. Under the null hypothesis of no treatment effects for all $j \in Q_l, l \in \mathcal{L}$, and assuming the validity of asymptotic approximations, $C_l / N_l$ should be centered around $1/2$. We bootstrap to obtain $p$-values for the null for each block and over all blocks. We also count the individually beneficial treatment effects that are statistically significant in the sets of outcomes across each of the groups indexed by the set $Q_l$. Using a 10\% significance level, on average 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program. We provide evidence against both null hypotheses.\footnote{We present $p$-values for these hypotheses and a number of combining functions by outcome categories in Appendix~\ref{appendix:results}.}
+Let $\mathcal{L}$ be the set of blocks. Under the null hypothesis of no treatment effects for all $j \in Q_l, l \in \mathcal{L}$, and assuming the validity of asymptotic approximations, $C_l / N_l$ should be centered around $1/2$. We bootstrap to obtain $p$-values for the null for each block and over all blocks. We also count the individually beneficial treatment effects that are statistically significant in the sets of outcomes across each of the groups indexed by the set $Q_l$. Using a 10\% significance level, on average 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program. We provide evidence against both null hypotheses.\footnote{We present $p$-values for these hypotheses and a number of combining functions by outcome categories in Appendix~\ref{appendix:results}.}
 
 Combining counts across all blocks enables us to avoid (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing.
 
@@ -270,9 +270,9 @@ Combining counts across all blocks enables us to avoid (i) arbitrarily picking o
 
 ABC/CARE has hundreds of treatment effects corresponding to all of the measures collected in the multiple waves of the longitudinal surveys.\footnote{For estimates of treatment effects for each outcome analyzed, see Appendix~\ref{appendix:results}.} Reporting these treatment effects in the text would overwhelm the reader. Here we report estimates of the main treatment effects that underlie our benefit/cost and rate of return analyses.\footnote{Appendix~\ref{appendix:results} reports treatment effects and step-down $p$-values for all the outcomes analyzed. These account for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat,Romano_Shaikh_2006_AnnStat}.}
 
-Evidence from ABC/CARE and other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{Unless otherwise specified, the inference we present throughout the paper is based on $1,000$ draws from the empirical bootstrap distribution. $p$-values are one-sided, non-parametric. We high-light values when estimates are significant at $10\%$. For estimations using combining different datasets, we bootstrap all datasets and combine them to form bootstrap draws. Inference based on permutation tests is available on request.} We adjust all estimates for sample attrition using Horvitz--Thompson \citeyearpar{Horvitz_Thompson_1952_JASA} inverse probability estimators (see Appendix~\ref{appendix:attrition} for details).
+Evidence from ABC/CARE and other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{Unless otherwise specified, the inference we present throughout the paper is based on $1,000$ draws from the empirical bootstrap distribution. $p$-values are one-sided, non-parametric. We highlight values when estimates are significant at $10\%$. For estimations using combining different datasets, we bootstrap all datasets and combine them to form bootstrap draws. Inference based on permutation tests is available on request.} We adjust all estimates for sample attrition using Horvitz--Thompson \citeyearpar{Horvitz_Thompson_1952_JASA} inverse probability estimators (see Appendix~\ref{appendix:attrition} for details).
 
-We account for control group substitution using a variety of econometric procedures: (a) matching, (b) instrumental variables, and (c) control functions (selection estimators). We rely on matching to generate the main inferences in this paper because the available instruments and exclusion restrictions are weak. Estimates from all of these procedures are in rough agreement, although the standard errors associated with IV and control function estimators are large. For further discussion, see Appendix~\ref{appendix:amethodology}.
+We account for control group substitution using a variety of econometric procedures: (a) matching, (b) instrumental variables, and (c) control functions (selection estimators). We rely on matching to generate the main inferences in this paper because the available instruments and exclusion restrictions are weak.\footnote{We present estimates based on kernel matching. A full set of results based on propensity score matching generates similar results and is available under request.} Estimates from all of these procedures are in rough agreement, although the standard errors associated with IV and control function estimators are large. For further discussion, see Appendix~\ref{appendix:amethodology}.
 
 \subsection{Estimated Treatment Effects}
 
@@ -290,7 +290,7 @@ The results for males are different. Treated subjects reported lower drug use an
 \end{scriptsize}
 \begin{tablenotes}
 \tiny
-Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | D = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, D=1 \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1_t | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0_t | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0, D = 1 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1_t | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0_t | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 , D = 1\big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.
+Note: This table shows the treatment effects for categories outcomes that are important for our benefit/cost analysis. Systolic and diastolic blood pressure are measured in terms of mm Hg. Each column present estimates for the following parameters: \textbf{(1)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | W = 1]$; {\textbf{(2)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, W=1 \big]$}; {\textbf{(3)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=0, D=0 \big]$}; {\textbf{(4)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=0, W = 1 \big] $}; {\textbf{(5)} $\mathbb{E} \big[ \bm{Y}^1 | \bm{B}, D=1 \big] - \mathbb{E} \big[ \bm{Y}^0 | \bm{B}, V=1, D = 0 \big]$}; {\textbf{(6)} $\mathbb{E} \big[ \bm{Y}^1 - \bm{Y}^0 | \bm{B}, V=1 , W = 1\big]$}. We account for the following background variables ($\bm{B}$): Apgar scores at minutes 1 and 5 and the high-risk index. We define the high-risk index in Appendix~\ref{appendix:background} and explain how we choose the control variables in Appendix~\ref{appendix:bvariables}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We highlight point estimates significant at the $10\%$ level.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -386,7 +386,7 @@ Figure~\ref{fig:labor-income-profiles} displays the life-cycle profiles for the 
 Note: Panels (a) displays the predicted labor income life-cycle profiles for ABC/CARE for males by treatment status, based on the method proposed in this section. We combine data from the Panel Study of Income Dynamics (PSID), the National Longitudinal Survey of Youth 1979 (NLSY79), and the Children of the National Longitudinal Survey of Youth 1979 (CNLSY79). We highlight the \textit{realized or observed} labor income at $t^*$ (age 30) for the ABC/CARE control- and treatment-group participants. Panel (b) displays the analogous figure for females. Standard errors are based on the empirical bootstrap distribution.  See Appendix~\ref{appendix:methodology} for a discussion of our choice of predictors and a sensitivity analysis to this choice.
 \end{sidewaysfigure}
 
-In the experimental sample, all of the parents of children with observed characteristics $\bm{B} \in \mathcal{B}_0$ agree to participate in the program. Since in the non-experimental sample there are no treatment group members, a test of the validity of our matching procedure is to compare the labor incomes of individuals in the non-experimental sample for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of the synthetic control group members (i.e., the groups in the non-experimental samples that we use to extrapolate control group outcomes). We also compare labor income at $t^*$ of both groups to the observed labor income in the experimental sample (we observe labor income at $t^*$). Figure~\ref{figure:controltests} makes these comparisons. We plot the labor income of individuals in our non-experimental sample such that $\bm{B} \in \mathcal{B}_0$ and the synthetic control group from ages 20 to 45. We also display the labor income of the experimental control group at $t^*$ (age 30).\footnote{The graphs stop at age 45 because, as previously noted, we do not observe all of the components of the High Risk Index after age 45 in the non-experimental samples. We use only a subset of it to make our life cycle projections. The subset variables are effective predictors over the range where the full set of $\bm{B}$ is available.}
+In the experimental sample, all of the parents of children with observed characteristics $\bm{B} \in \mathcal{B}_0$ agree to participate in the program. Since in the non-experimental sample there are no treatment group members, a test of the validity of our matching procedure is to compare the labor incomes of individuals in the non-experimental sample for whom $\bm{B} \in \mathcal{B}_0$ to the labor incomes of the synthetic control group members (i.e., the groups in the non-experimental samples that we use to extrapolate control group outcomes). We also compare labor income at $t^*$ of both groups to the observed labor income in the experimental control group (we observe labor income at $t^*$). Figure~\ref{figure:controltests} makes these comparisons. We plot the labor income of individuals in our non-experimental sample such that $\bm{B} \in \mathcal{B}_0$ and the synthetic control group from ages 20 to 45. We also display the labor income of the experimental control group at $t^*$ (age 30).\footnote{The graphs stop at age 45 because we do not observe all of the components of the High Risk Index after age 45 in the non-experimental samples. We use only a subset of it to make our life cycle projections. The subset variables are effective predictors over the range where the full set of $\bm{B}$ is available.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -407,7 +407,7 @@ Note: Panels (a) displays the predicted labor income for males in the non-experi
 
 \subsection{Justifying the Matching Procedure} \label{section:just}
 
-To examine the conditions for the validity of the matching approach, and to provide an analytical framework for the extrapolations used in this paper, it is helpful to introduce some general notation. Recall that $Y^d_{j,t}$ is outcome $j$ at time $t$ for a treated person $(d\in\{0,1\})$. To simplify the analysis, in this subsection we do not further partition the control group. We define determinants of outcomes---vector $\bm{X}^d_t$---that may themselves be the outcomes of treatment, and may also depend on lagged outcomes also affected by treatment. Outcome variables are generated by the following equation
+To examine the conditions for the validity of the matching approach, and to provide an analytical framework for the extrapolations used in this paper, it is helpful to introduce some general notation. Recall that $Y^d_{j,t}$ is outcome $j$ at time $t$ for person fixed to $(d\in\{0,1\})$. To simplify the analysis, in this subsection we do not further partition the control group. We define determinants of outcomes---vector $\bm{X}^d_t$---that may themselves be the outcomes of treatment, and may also depend on lagged outcomes also affected by treatment. Outcome variables are generated by the following equation
 \begin{equation}\label{eq:trenchfoot}
 Y^d_{j,t} = \phi^d_{j,t} (\bm{X}^d_t, \bm{B}, \varepsilon^d_{j,t}), \quad d \in \{0,1\}, \quad \  j \in \mathcal{J}_t, t \in \{0,\dots,T\}
 \end{equation}
@@ -568,7 +568,7 @@ To estimate the life-cycle benefits and costs of ABC/CARE related to criminal ac
 We follow four steps to estimate the costs of crime.
 
 \begin{enumerate}
-\item \textit{Count arrests and sentences.} We start by counting the total number of sentences for each individual and type of crime (arson, assault, etc.) up to age 34, matching crimes across data sources, to construct the total number of  arrests for each individual and type of crime up to age 34.\footnote{In practice, we count all offenses (an arrest might include multiple offenses). This gives the correct number of victims for our estimations. The youth data have coarser categories than the rest of the data: violent, property, drug, and other. To match these data with the adult data, we assume that all property crimes were larcenies and that all violent crimes are assaults. In the ABC/CARE sample, assault is the most common type of violent crime, and larceny/theft is the most common property crime.} For individuals missing arrest data,\footnote{About 10\% of the ABC/CARE sample has missing arrest data. We fail to reject differences in observed characteristics between the treatment- and control-group participants for whom we observe arrests data (see Appendix~\ref{appendix:data}).} we impute the number of arrests by multiplying the number of sentences for each type of crime by a national arrest-sentence ratio for the respective crime.\footnote{This arrest-sentence ratio is constructed using the National Crime Victimization Survey (NJRP) and and the Uniform Crime Reporting Statistics (UCRS).}
+\item \textit{Count arrests and sentences.} We start by counting the total number of sentences for each individual and type of crime (arson, assault, etc.) up to age 34, matching crimes across data sources, to construct the total number of  arrests for each individual and type of crime up to age 34.\footnote{In practice, we count all offenses (an arrest might include multiple offenses). This gives the correct number of victims for our estimations. The youth data have coarser categories than the rest of the data: violent, property, drug, and other. To match these data with the adult data, we assume that all property crimes were larcenies and that all violent crimes are assaults. In the ABC/CARE sample, assault is the most common type of violent crime, and larceny/theft is the most common property crime.} For individuals missing arrest data,\footnote{About 10\% of the ABC/CARE sample has missing arrest data. We fail to reject differences in observed characteristics between the treatment- and control-group participants for whom we observe arrests data (see Appendix~\ref{appendix:data}).} we impute the number of arrests by multiplying the number of sentences for each type of crime by a national arrest-sentence ratio for the respective crime.\footnote{This arrest-sentence ratio is constructed using the National Crime Victimization Survey (NJRP) and the Uniform Crime Reporting Statistics (UCRS).}
 
 \item \textit{Construct predictions.} Based on the sentences observed before age 34, we predict the sentences that the ABC/CARE subjects will have after age 34. Data from the North Carolina Department of Public Safety (NCDPS), which provide lifetime sentences of individuals in North Carolina, are used to estimate sentences incurred after age 34 from sentences incurred before age 34. Applying these models to the ABC/CARE data, we predict the number of future sentences for each subject up to age 50.\footnote{We assume that individuals with no criminal records before age 34 commit no crimes after age 34.} We then add these estimates to the original number of sentences, getting an estimate of the lifetime sentences. Adding these estimates increases the total count of crimes by 30\%--50\%.
 
@@ -713,7 +713,7 @@ Evidence shows, also, that males are much more likely to commit crimes that are 
 
 For health, the gender differences are substantial as well. But both males and females have substantial gains: males on more standard measures of physical health, while females on a set of mental health measures (see Appendix~\ref{appendix:results}). We quantify both of these components (see Section~\ref{section:health} and Appendix~\ref{appendix:health}).
 
-When analyzing different counterfactuals, there is a substantial difference between males and females. The difference is driven by one of the counterfactuals: treatment vs. alternative preschools. The estimates for both males and females generate a similar assessment of ABC/CARE treatment if compared to stay at home. It is the case that males benefit much more than treatment relative to alternative preschools than what they benefit of treatment relative to staying at home. This result is consistent three sets of findings elsewhere noted: (i) stark gender differences resulting from attending childcare\citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects,Doyle-etal_2015_Econ-Hum-Bio,Doyle-etal_2016_PLoS-ONE}; (ii) females being less sensitive to uncertain environments \citep{Autor-etal_2015_Family-Disadvantage} and (iii) maternal absence being more deleterious for males \citep{Rutter_1972_Maternal-Deprivation}.
+When analyzing different counterfactuals, there is a substantial difference between males and females. The difference is driven by one of the counterfactuals: treatment vs. alternative preschools. The estimates for both males and females generate a similar assessment of ABC/CARE treatment if compared to stay at home. It is the case that males benefit much more than treatment relative to alternative preschools than what they benefit of treatment relative to staying at home. This result is consistent three sets of findings noted elsewhere: (i) stark gender differences resulting from attending childcare\citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects,Doyle-etal_2015_Econ-Hum-Bio,Doyle-etal_2016_PLoS-ONE}; (ii) females being less sensitive to uncertain environments \citep{Autor-etal_2015_Family-Disadvantage} and (iii) maternal absence being more deleterious for males \citep{Rutter_1972_Maternal-Deprivation}.
 
 The evidence we show does not indicate that the program has no benefit for females; in fact it does. If compared to staying at home, the gain for females indicates that there is a gain of $4.81$ dollars per each dollar invested. In fact, when we decompose the net-present value for each of the components that we monetize, we see substantial benefits for females across various categories. Health and crime included. For males, the magnitudes are noticeably reinforce when comparing treatment to alternative preschool (see Figures ~\ref{figure:npvsf} and \ref{figure:npvsm}).
 
@@ -745,7 +745,7 @@ Note: This figure displays the life-cycle net present values of the main compone
 
 \subsection{Using our Estimates to Understand Recent Benefit/Cost Analyses}
 
-We use our analysis to examine the empirical foundations of the approach to benefit/cost analysis taken a prototypical study of \citet{Kline_Walters_2016_QJE}. They use data on the Head Start Impact Study (HSIS) and report a benefit/cost ratio between $1.50$ and $1.84 > 0$.\footnote{HSIS is a one-year-long randomized evaluation of Head Start.} Their analysis proceeds in three steps: (i) calculate the treatment effect on an IQ test\footnote{The Wechsler Preschool and Primary Scale of Intelligence (WPPSI)} at age 5; (ii) monetize this gain using the return to the IQ measured at age 5 in terms of net present value of labor income at age 27 \citep{Chetty_Friedman_etal_2011_QJoE}.\footnote{For this comparison exercise, we interpret the earnings estimated in \citet{Chetty_Friedman_etal_2011_QJoE} to be equivalent to labor income.} Calculations from \citet{Chetty_Friedman_etal_2011_QJoE} indicate that a 1 standard deviation gain in IQ at age 5 implies a $13.1\%$ increase in the net present value of labor income through age 27;\footnote{This is based on combining information from Project Star and administrative data at age 27.} and (iii) calculate the benefit/cost ratio based on this gain and their own calculations of the program's cost.\footnote{Their calculation assigns the net present value of labor income through age 27 of $\$385,907.17$ to the control-group participants, as estimated by  \citet{Chetty_Friedman_etal_2011_QJoE}.}$^,$\footnote{All money values that we provide in this section are in 2014 USD. We discount the value provided by \citet{Chetty_Friedman_etal_2011_QJoE} to the age of birth of the children in our sample (first cohort).}
+We use our analysis to examine the empirical foundations of the approach to benefit/cost analysis taken a prototypical study of \citet{Kline_Walters_2016_QJE}. They use data on the Head Start Impact Study (HSIS) and report a benefit/cost ratio between $1.50$ and $1.84$.\footnote{HSIS is a one-year-long randomized evaluation of Head Start.} Their analysis proceeds in three steps: (i) calculate the treatment effect on IQ around age 4.5\footnote{An index based on the Peabody Picture Vocabulary and Woodcock Johnson III Tests.} at age 5; (ii) monetize this gain using the return to the IQ measured between ages 5 and 7 in terms of net present value of labor income at age 27 \citep{Chetty_Friedman_etal_2011_QJoE}.\footnote{\citet{Chetty_Friedman_etal_2011_QJoE} return is based on Stanford Achievement Tests.}$^,$\footnote{For this comparison exercise, we interpret the earnings estimated in \citet{Chetty_Friedman_etal_2011_QJoE} to be equivalent to labor income.} Calculations from \citet{Chetty_Friedman_etal_2011_QJoE} indicate that a 1 standard deviation gain in IQ at age 5 implies a $13.1\%$ increase in the net present value of labor income through age 27;\footnote{This is based on combining information from Project Star and administrative data at age 27.} and (iii) calculate the benefit/cost ratio based on this gain and their own calculations of the program's cost.\footnote{Their calculation assigns the net present value of labor income through age 27 of $\$385,907.17$ to the control-group participants, as estimated by  \citet{Chetty_Friedman_etal_2011_QJoE}.}$^,$\footnote{All money values that we provide in this section are in 2014 USD. We discount the value provided by \citet{Chetty_Friedman_etal_2011_QJoE} to the age of birth of the children in our sample (first cohort).}
 
 
 \begin{table}[!htbp]
