--- a/Appendices/Methodology.tex
+++ b/Appendices/Methodology.tex
@@ -299,7 +299,7 @@ Note: This figure displays the predicted labor income profile obtained when cons
 
 \noindent at time $t \in \{0, \ldots, T\}$ and for outcome $j \in \mathcal{J}_{t}$.\\
 
-\noindent In our empirical analysis, we assume that $\phi_{j,t}^d$ is a linear function of $ \bm{X}_{t}^d, \bm{B}, \bm{\varepsilon}_{j,t}^d$ for $d \in \{0,1\}$. We test if the coefficients characterizing $\phi_{j,t}^d$ are the same for specifications including (i) $\bm{X}_{t}^d$, (ii) including  $\bm{B}$, and (iii) $\bm{X}_{t}^d, \bm{B}$. For this test, we use the two outcomes we predict, labor income and transfer income.\footnote{We observe both variables at age 30 in the ABC/CARE sample, which we use to test the assumption.}
+\noindent In our empirical analysis, we assume that $\phi_{j,t}^d$ is a linear function of $ \bm{X}_{t}^d, \bm{B}, \bm{\varepsilon}_{j,t}^d$ for $d \in \{0,1\}$. We test if the coefficients characterizing $\phi_{j,t}^d$ are the same for specifications including (i) $\bm{X}_{t}^d$, (ii) including  $\bm{B}$, and (iii) $\bm{X}_{t}^d, \bm{B}$. For this test, we use the two outcomes we predict, labor income and transfer income.\footnote{We observe both variables at age 30 in the ABC/CARE sample, which we use to test the assumption.}\\
 
 \noindent A potential problem is endogeneity (e.g., mean dependence between schooling years and unobserved skills). Unless the bias in the treatment and control groups are exactly the same, endogeneity would bias our forecasts. A sufficient condition to obtain unbiased forecasts is $\mathbb{E} \left[ \bm{\varepsilon}_{j,t}^0 | \bm{X}_{t}^d, \bm{B} \right] = \mathbb{E} \left[ \bm{\varepsilon}_{j,t}^1 | \bm{X}_{t}^d, \bm{B} \right]$.\\
 
