updated tables in C.5 and C.6

--- a/output/abccare_funcform1_ready.tex
+++ b/output/abccare_funcform1_ready.tex
@@ -6,7 +6,7 @@ PIAT (5-7) &         &         &         &         &         &         &        
 Education (30) &         &         &         &         &         &         &         &         &         &         &         &         \\
 Labor Income (21) &         &         &         &         &         &         &         &         &         &         &         &         \\
 BMI (34) &         &         &         &         &         &         &         &         &         &         &         &         \\
-$\hat{\theta}_{c}$ &         &         &         &         &         &         &  1,322.009 &     0.360 &  -329.080 &     0.510 & -1,651.089 &     0.535 \\  
-$\hat{\theta}_{n}$ &         &         &         &         &         &         &   947.122 &     0.445 &  9,979.087 &     0.195 &  9,031.964 &     0.205 \\  
+$\hat{\bm{\theta}}_{c}$ &         &         &         &         &         &         &  1,322.009 &     0.360 &  -329.080 &     0.510 & -1,651.089 &     0.535 \\  
+$\hat{\bm{\theta}}_{n}$ &         &         &         &         &         &         &   947.122 &     0.445 &  9,979.087 &     0.195 &  9,031.964 &     0.205 \\  
 Constant  & 24,500.00 &     0.130 &  3,731.899 &     0.475 & -20,700.00 &     0.610 & 30,700.00 &     0.120 &  8,791.943 &     0.475 & -21,900.00 &     0.600 \\  
 \bottomrule \end{tabular}
