--- a/output/abccare_funcform2_ti_ready.tex
+++ b/output/abccare_funcform2_ti_ready.tex
@@ -6,7 +6,7 @@ PIAT (5-7) &  -159.196 &     0.870 &   -44.453 &     0.855 &   114.743 &     0.2
 Education (30) &  -693.144 &     0.950 &   212.446 &     0.380 &   905.589 &     0.075 &  -621.848 &     0.890 &   140.458 &     0.435 &   762.306 &     0.150 \\  
 Labor Income (34) &     0.712 &     0.060 &     0.165 &     0.210 &    -0.547 &     0.845 &     0.627 &     0.100 &     0.181 &     0.185 &    -0.446 &     0.745 \\  
 BMI (34)  &         &         &         &         &         &         &         &         &         &         &         &          \\  
-$\hat{\theta}_{c}$ &         &         &         &         &         &         &  -348.137 &     0.955 &    -9.086 &     0.550 &   339.051 &     0.055 \\  
-$\hat{\theta}_{n}$ &         &         &         &         &         &         &  -621.848 &     0.890 &   140.458 &     0.435 &   762.306 &     0.150 \\  
+$\hat{\bm{\theta}}_{c}$ &         &         &         &         &         &         &  -348.137 &     0.955 &    -9.086 &     0.550 &   339.051 &     0.055 \\  
+$\hat{\bm{\theta}}_{n}$ &         &         &         &         &         &         &  -621.848 &     0.890 &   140.458 &     0.435 &   762.306 &     0.150 \\  
 Constant &  -159.196 &     0.870 &   -44.453 &     0.855 &   114.743 &     0.205 &     0.627 &     0.100 &     0.181 &     0.185 &    -0.446 &     0.745 \\  
 \bottomrule  \end{tabular}
