--- a/output/abccare_funcform3_ti_ready.tex
+++ b/output/abccare_funcform3_ti_ready.tex
@@ -6,7 +6,7 @@ PIAT (5-7) &  -270.010 &     0.810 &   -35.091 &     0.810 &   234.918 &     0.2
 Education (30) & -1,171.052 &     0.750 &  -429.475 &     0.945 &   741.577 &     0.365 &  -309.099 &     0.555 &  -346.975 &     0.850 &   -37.876 &     0.505 \\  
 Labor Income (21) &     0.731 &     0.140 &     0.096 &     0.280 &    -0.635 &     0.835 &     0.702 &     0.180 &     0.103 &     0.195 &    -0.599 &     0.775 \\  
 BMI (34) &  -263.891 &     0.810 &     5.033 &     0.435 &   268.924 &     0.210 &  -204.412 &     0.670 &    -2.448 &     0.515 &   201.964 &     0.325 \\  
-$\hat{\theta}_{c}$ &         &         &         &         &         &         &  3091.375 &     0.225 &  -983.937 &     0.820 & -4075.312 &     0.840 \\  
-$\hat{\theta}_{n}$ &         &         &         &         &         &         &  1,637.451 &     0.305 & -1,126.536 &     0.970 & -2,763.987 &     0.780 \\  
+$\hat{\bm{\theta}}_{c}$ &         &         &         &         &         &         &  3091.375 &     0.225 &  -983.937 &     0.820 & -4075.312 &     0.840 \\  
+$\hat{\bm{\theta}}_{n}$ &         &         &         &         &         &         &  1,637.451 &     0.305 & -1,126.536 &     0.970 & -2,763.987 &     0.780 \\  
 Constant & 44,604.582 &     0.075 &  7,791.563 &     0.170 & -36,800.00 &     0.860 & 68,777.523 &     0.105 &  1,403.855 &     0.475 & -67,400 &     0.880 \\  
 \bottomrule \end{tabular}
