as sent to the typists; minor reference changes

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -499,7 +499,7 @@ Our predictions are based on matching individuals in the non-experimental sample
 
 A simple example is the following: in the treatment sample, the program causes more education. Suppose we match based on education to create a treatment synthetic cohort. But doing so, we may match individuals in the non-experimental sample who are highly educated because they come from better backgrounds and are more motivated compared to those in the experiment who are induced to be educated by the experiment. Omitted ability could bias predictions based on the matched samples.
 
-We discuss these issue and present a comprehensive set of tests of Assumption~\ref{ass:eczema} and Assumption~\ref{ass:corns} in Appendix~\ref{app:methodology}. Here we present a brief discussion of the methodology for doing so and illustrate it presenting tests for Assumption~\ref{ass:eczema}. 
+We discuss these issue and present a comprehensive set of tests of Assumption~\ref{ass:eczema} and Assumption~\ref{ass:corns} in Appendix~\ref{appendix:methodology}. Here we present a brief discussion of the methodology for doing so and illustrate it presenting tests for Assumption~\ref{ass:eczema}. 
 
 A potential problem is endogeneity (e.g., mean dependence between schooling years and unobserved skills). Unless the bias in the treatment and control groups are exactly the same, endogeneity would bias our predictions. If predictions are linear, a sufficient condition to obtain unbiased predictions is $\mathbb{E} \left[ \bm{\varepsilon}_{j,t}^0 | \bm{X}_{t}^d, \bm{B} \right] = \mathbb{E} \left[ \bm{\varepsilon}_{j,t}^1 | \bm{X}_{t}^d, \bm{B} \right]$. 
 
@@ -516,7 +516,7 @@ With an auxiliary system of measures such that $\bm{M}_{t}^d $ has at least thre
 
 We use a set of measures from ages 2 to 8 to to obtain an estimate of $\bm{\theta}_{c}^d$ and a set of measures of somatization, hostility, depression, and global index of mental health to measure (all at age 21) to estimate $\bm{\theta}_{n}^d$.\footnote{For definitions and treatment effects on these variables see Appendix~\ref{appendix:results}.}
 
-Given the conditions in \eqref{eq:msystemmain}, the estimated coefficients characterizing \eqref{eq:eqs} are unbiased, and therefore we can test Assumption~\ref{ass:eczema}. The tests consists of asking if the predictions variables we use are enough to summarize the treatment effects on the variables we predict, and therefore an indicator of treatment take-up becomes irrelevant when conditioning on these variables. We cannot reject the hypothesis that coefficient associated to random assignment to treatment is different from zero, once we condition on the variables we use to predict (see Table~\ref{table:tocome}). Using this same structure, we propose tests for Assumption~\eqref{ass:corns} in Appendix~\ref{app:methodology}. We do not find strong evidence against it.
+Given the conditions in \eqref{eq:msystemmain}, the estimated coefficients characterizing \eqref{eq:eqs} are unbiased, and therefore we can test Assumption~\ref{ass:eczema}. The tests consists of asking if the predictions variables we use are enough to summarize the treatment effects on the variables we predict, and therefore an indicator of treatment take-up becomes irrelevant when conditioning on these variables. We cannot reject the hypothesis that coefficient associated to random assignment to treatment is different from zero, once we condition on the variables we use to predict (see Table~\ref{table:tocome}). Using this same structure, we propose tests for Assumption~\eqref{ass:corns} in Appendix~\ref{appendix:methodology}. We do not find strong evidence against it.
 
  \textbf{[JJH: Jorge, do we do this in comparison samples? Where?] [JLG: yes, noting the appendix after assertion now. And they effectively do not change in either the experimental or non-experimental samples.] [JJH: Give me updated figure.] [JLG: All tables with these tests in Appendix C.6.] [JJH: No shift in intercept actually? Seems too strong -- yet we need it.]  [JLG: Yes, we cannot reject differences once we account for all our prediction variables.] [JLG: I'm coordinating with Rodrigo for this. Not for him to do it, but for me to use the same measures that you use in the AER paper.]}
 
